--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </header>
     <main>
     <section id="content">
-      <article id="sejarah" class="card">
+      <article id="beranda" class="card">
         <h2 class="program">Program Rumah Quran Sains Dan Teknologi</h2>
         <p class="isi">
          
@@ -51,6 +51,13 @@
         
         Sekarang, Ikmabo masih aktif di Bandung dengan sekretariat di sekitar Kampus UIN SGD Bandung. Mereka telah meraih prestasi dalam bidang olahraga sepak bola dan mengadakan diskusi rutin, serta menerbitkan bulletin TALAS untuk mengembangkan bakat intelektual mahasiswa mereka. </article>
       <button class="btn-1">Selanjutnya</button>
+    </section>
+
+    <section id="msmb">
+      <article id="msmb" class="card">
+        <h2 class="msmb">Masa Silaturahmi Mahasiswa Bogor</h2>
+
+      </article>
     </section>
   </main>
 </article>
