--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
           <section>
             <h3>Informasi Lainnya</h3>
             <div class="social">
-            <a href="#"><i class="fab fa-youtube fa-2x" style="color: rgb(168, 168, 255);"></i></a>
-            <a href="#"><i class="fab fa-whatsapp fa-2x" style="color: rgb(168, 168, 255);"></i></a>
-            <a href="https://www.instagram.com/ikmabo/?hl=en"><i class="fab fa-instagram fa-2x" style="color: rgb(168, 168, 255);"></i></a>
+            <a href="#"><i class="fab fa-youtube fa-2x" style="color: black;"></i></a>
+            <a href="#"><i class="fab fa-whatsapp fa-2x" style="color: black;"></i></a>
+            <a href="https://www.instagram.com/ikmabo/?hl=en"><i class="fab fa-instagram fa-2x" style="color: black;"></i></a>
             <p>Organisasi Mahasiswa asal Bogor yang berada di bandung, berdiri resmi sejak 1980</p>
            </div>
           </section>
